# tire-sidewall-text-extraction

./: .gitignore  EVALUATION_README.md  README.md  activity.md  backbone_transfer.py  coco.yaml  eval_yolo.py  evaluate.py  evaluation_results.json  evaluation_results_summary.csv  examples.py  experiment.py  mmocr_to_yolo.py  pyproject.toml  requirements.txt  start.sh  yolo_11_resnet.yml
eval_results/: gemini_flash.csv  gemini_flash.json  rec_evaluation_results.csv  textdet_results.csv  yolo.csv
eval_results/Entire/: g25_flash_only_run1.csv  g25_flash_only_run1.json  g25_flash_only_run2.csv  g25_flash_only_run2.json  g25_flash_only_run3.csv  g25_flash_only_run3.json  g25_flash_pipepline_run1.csv  g25_flash_pipepline_run1.json  g25_flash_pipepline_run2.csv  g25_flash_pipepline_run2.json  g25_flash_pipepline_run3.csv  g25_flash_pipepline_run3.json
eval_results/Improved_YOLO_E100/: args.yaml  results.csv
eval_results/Preprocessing/: statistics.txt
eval_results/TRBA_Result/: log_dataset.txt  log_train.txt  opt.txt
scripts/: aggregate_field_method_metrics.py  avg_exec_time_per_image.py  avg_exec_time_per_image_by_method.py  batch_flatten_tires.py  compare_preprocessing.py  compare_two_methods_times.py  eval_mmocr.py  eval_utils.py  eval_yolo.py  evaluate.py  plot_two_methods_exec_time.py
src/: __init__.py  app.py  config.py  exceptions.py  main.py  pipeline.py
train/: train_origin_yolo.ipynb  train_trba.ipynb  train_yolo_text_det.ipynb
utils/: backbone_transfer.py  batch_flatten_tires.py  compare_preprocessing.py  cv_utils.py  tire_cropping.py
(+42 files in other folders)
